<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <EditText
        android:id="@+id/endpoint_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/end_point"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:text="192.168.213.38:8080"
        tools:hint="Endpoint"
        />

  </android.support.design.widget.TextInputLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/requires_ssl"
          tools:text="Requires SSL"
          />

    <Switch
        android:id="@+id/ssl_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:text="Requires authentication"
        android:text="@string/requires_authentication"
        />

    <Switch
        android:id="@+id/auth_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/auth_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:visibility="gone">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/auth_login_editText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:hint="@string/login"
          android:imeOptions="actionNext"
          tools:hint="Login"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/auth_password_editText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:hint="@string/password"
          android:imeOptions="actionNext"
          android:inputType="textPassword"
          tools:hint="Password"
          />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/auth_check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Check"
        android:text="@string/credentials_check"
        android:layout_gravity="center"/>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:text="Refresh at app launch"
        android:text="@string/refresh_at_startup"
        />

    <Switch
        android:id="@+id/refresh_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        />

  </LinearLayout>

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1">

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        tools:text="OK"
        android:text="@string/ok"/>

  </FrameLayout>

</LinearLayout>